atualização controllers